jhead (2.88-1) UNRELEASED; urgency=low

  * New upstream release
    - debian/patches/30_buffer_overflow: patch included upstream
  * debian/control: Standards-Version: 3.8.1 -> 3.8.3. No change needed.

 -- Ludovic Rousseau <rousseau@debian.org>  Sun, 29 Nov 2009 17:47:00 +0100

jhead (2.875-2) unstable; urgency=low

  * Fix "segmentation fault on corrupt input file" patch from upstream
    debian/patches/30_buffer_overflow (Closes: #530401)

 -- Ludovic Rousseau <rousseau@debian.org>  Sun, 31 May 2009 17:36:13 +0200

jhead (2.875-1) unstable; urgency=low

  * New upstream release
   - Fix "document Nonfatal Error: Illegal subdirectory link" the error
     message is now explicit that the erorr is in EXIF data and not the file
     system (Closes: #525724)
  * update from debhelper 4 to 7
  * Standards-Version: 3.7.3 -> 3.8.1
   - add support of noopt, nostrip and parallel= in DEB_BUILD_OPTIONS

 -- Ludovic Rousseau <rousseau@debian.org>  Thu, 30 Apr 2009 19:59:57 +0200

jhead (2.87-1) unstable; urgency=low

  * New upstream release
   - Closes: #517990: jhead: -ce broken (fix released in 2.87)

 -- Ludovic Rousseau <rousseau@debian.org>  Sat, 07 Mar 2009 14:10:41 +0100

jhead (2.86-2) unstable; urgency=low

  * debian/patches/20_jhead.1: Closes: #515659
    "jhead: Manpage error in '-te' example"
  * use quilt again

 -- Ludovic Rousseau <rousseau@debian.org>  Wed, 18 Feb 2009 15:55:26 +0000

jhead (2.86-1) unstable; urgency=low

  * New upstream release
  * remove patches 01_makefile, 07_jhead.1, 08_jhead.1, 09_long_int,
    10_jhead.1 since they are now included upstream
  * do not use quilt anymore (no patch needed)

 -- Ludovic Rousseau <rousseau@debian.org>  Sun, 15 Feb 2009 14:45:20 +0100

jhead (2.85-1) unstable; urgency=low

  * New upstream release
   - Closes: #504194 "CVE-2008-4640: insecure file handling"
  * debian/patches/11_jhead.c.dpatch: removed since included upstream
  * debian/*: change from dpatch to quilt
